--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "AI Toolkit Directory - I Migliori Strumenti AI",
   "short_name": "AI Tools",
   "description": "Directory curata dei migliori strumenti AI, organizzati per categoria. Chat/Agents, Image Generation, Dev Tools e molto altro.",
+  "version": "1.4.5",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#667eea",
@@ -10,6 +11,7 @@
   "categories": ["productivity", "utilities", "business"],
   "lang": "it",
   "scope": "/",
+  "dir": "ltr",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
@@ -118,5 +120,15 @@
   "prefer_related_applications": false,
   "edge_side_panel": {
     "preferred_width": 400
-  }
+  },
+  "handle_links": "preferred",
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "web+aitool",
+      "url": "/?tool=%s"
+    }
+  ]
 }
