--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,17 @@
   "name": "AI Toolkit Directory - I Migliori Strumenti AI",
   "short_name": "AI Tools",
   "description": "Directory curata dei migliori strumenti AI, organizzati per categoria. Chat/Agents, Image Generation, Dev Tools e molto altro.",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
   "orientation": "portrait-primary",
-  "categories": ["productivity", "utilities", "business"],
+  "categories": [
+    "productivity",
+    "utilities",
+    "business"
+  ],
   "lang": "it",
   "scope": "/",
   "dir": "ltr",
